ui fixes & added menu collapse to mobile

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -36,6 +36,15 @@ $border-color: #DBDBDB;
   background-color: $black;
 }
 
+.btn-reset {
+  background: none;
+  border: none;
+
+  &:focus {
+    outline: 0;
+  }
+}
+
 hr {
   height: 1px;
   width: 80%;
@@ -205,9 +214,19 @@ body {
 
 .hero {
   height: calc(100vh - 6rem);
-  background-color: $main;
   color: $white;
   position: relative;
+
+  .hero-background {
+    background-color: $main;
+    clip-path: ellipse(78% 72% at 73% 20%);
+    height: calc(100vh - 6rem);
+    width: 100vw;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
 
   & .container {
     padding: 2rem 1.5rem 0 1.5rem;
@@ -233,9 +252,9 @@ body {
     position: absolute;
     z-index: 1;
     left: 50%;
-    top: 63%;
-    transform: translate(-50%, -50%);
-    width: 95vw;
+    top: 73%;
+    transform: translate(-40%, -50%);
+    width: 80%;
     max-width: 700px;
   }
 
@@ -247,11 +266,12 @@ body {
     color: $white;
     font-weight: 600;
     background-color: $secondary;
-    width: 20rem;
+    width: 90%;
     height: 4rem;
     box-shadow: 0 4px 8px rgba($black, 0.25);
     margin: auto;
   }
+
 }
 
 //
@@ -367,9 +387,20 @@ body {
   font-size: 1.8rem;
   font-weight: bold;
   margin: 1rem;
+  animation: cardComeIn .3s ease-in;
 
   & img {
     max-width: 5rem;
+  }
+}
+
+@keyframes cardComeIn {
+  0% {
+    opacity: 0
+  }
+
+  100% {
+    opacity: 1
   }
 }
 
@@ -390,28 +421,29 @@ body {
     font-weight: medium;
     margin-bottom: 0.5rem;
     margin-left: 6rem;
-    position: relative;
 
-    &::before {
-      content: "";
-      height: 22rem;
-      width: 3px;
-      background-color: $main-darker;
-      position: absolute;
-      top: 140%;
-      left: -3rem;
-    }
   }
 
   & ul {
     margin-left: 6rem;
     list-style: none;
+    position: relative;
 
     & li {
       font-size: 1.6rem;
       color: $main-darker;
       font-weight: bold;
       margin-bottom: 2rem;
+    }
+
+    &::before {
+      content: "";
+      height: 100%;
+      width: 3px;
+      background-color: $main-darker;
+      position: absolute;
+      top: 0;
+      left: -3rem;
     }
   }
 
@@ -492,6 +524,20 @@ body {
 
 .info {
   padding: 0 1rem;
+  position: relative;
+
+  & .icon-wrapper {
+    position: absolute;
+    height: 3rem;
+    color: $text-dark;
+    opacity: 0.35;
+    width: 4rem;
+    bottom: 1rem;
+    right: 2rem;
+    display: flex;
+    text-align: center;
+  }
+
 
   & ul {
     display: flex;
@@ -531,11 +577,19 @@ body {
   }
 
   & .info-wrapper {
-    padding: 0 1rem;
+    padding: 0.5rem 1rem;
     font-size: 1.5rem;
     line-height: 1.5;
-    min-height: 16rem;
     border-bottom: solid 1px $border-color;
+    max-height: 20rem;
+    transition: max-height .3s ease-in, opacity .5s ease;
+
+    &.collapsed {
+      max-height: 0;
+      overflow: hidden;
+      opacity: 0;
+      padding-bottom: 0;
+    }
   }
 }
 
